src/nab/nabgrm.output
Terminals which are not used

   SYM_ADDRESS
   SYM_ATTRIBUTE
   SYM_CALL
   SYM_DECL
   SYM_ERROR
   SYM_FOREACH
   SYM_INDEX
   SYM_INDIRECT
   SYM_LIST
   SYM_NEGATE
   SYM_PARM
   SYM_POINTS_TO
   SYM_STMTLIST
   SYM_TEST
   SYM_TYPE


State 110 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 234 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: defpart stmtpart

    2 defpart: defs
    3        | /* empty */

    4 defs: def
    5     | def defs

    6 stmtpart: stmts
    7         | /* empty */

    8 stmts: stmt
    9      | stmts stmt

   10 def: type_decl
   11    | var_decl
   12    | func_decl
   13    | func_def

   14 type_decl: struct_type SYM_SEMICOLON

   15 var_decl: type var_list SYM_SEMICOLON

   16 type: simple_type
   17     | struct_type

   18 simple_type: SYM_INT
   19            | SYM_SIZE_T
   20            | SYM_FLOAT
   21            | SYM_STRING
   22            | SYM_FILE
   23            | SYM_POINT
   24            | SYM_BOUNDS
   25            | SYM_MATRIX
   26            | SYM_ATOM
   27            | SYM_RESIDUE
   28            | SYM_MOLECULE

   29 struct_type: SYM_STRUCT id
   30            | SYM_STRUCT id SYM_LBRACE field_list SYM_RBRACE

   31 field_list: field
   32           | field field_list

   33 field: simple_type id_list SYM_SEMICOLON

   34 id_list: id
   35        | id SYM_COMMA id_list

   36 var_list: var
   37         | var SYM_COMMA var_list

   38 var: id
   39    | id SYM_LBRACK aspec SYM_RBRACK

   40 aspec: as_list
   41      | SYM_HASHED

   42 as_list: asize
   43        | asize SYM_COMMA as_list

   44 asize: expr
   45      | SYM_DYNAMIC

   46 func_decl: func_hdr SYM_SEMICOLON
   47          | func_hdr id SYM_SEMICOLON

   48 @1: /* empty */

   49 func_def: func_hdr @1 func_body

   50 @2: /* empty */

   51 func_hdr: type id @2 SYM_LPAREN formals SYM_RPAREN

   52 formals: fp_list
   53        | /* empty */

   54 fp_list: f_parm
   55        | f_parm SYM_COMMA fp_list

   56 f_parm: type var

   57 @3: /* empty */

   58 @4: /* empty */

   59 @5: /* empty */

   60 func_body: SYM_LBRACE @3 f_defpart @4 f_stmtpart SYM_RBRACE @5 SYM_SEMICOLON

   61 f_defpart: lv_decls
   62          | /* empty */

   63 lv_decls: var_decl
   64         | lv_decls var_decl

   65 f_stmtpart: stmts
   66           | /* empty */

   67 stmt: expr_stmt
   68     | alloc_stmt
   69     | assert_stmt
   70     | break_stmt
   71     | continue_stmt
   72     | cmpd_stmt
   73     | dealloc_stmt
   74     | debug_stmt
   75     | delete_stmt
   76     | for_stmt
   77     | if_stmt
   78     | return_stmt
   79     | while_stmt

   80 alloc_stmt: SYM_ALLOCATE expr SYM_SEMICOLON

   81 assert_stmt: SYM_ASSERT expr SYM_SEMICOLON

   82 break_stmt: SYM_BREAK SYM_SEMICOLON

   83 @6: /* empty */

   84 cmpd_stmt: SYM_LBRACE @6 stmts SYM_RBRACE

   85 continue_stmt: SYM_CONTINUE SYM_SEMICOLON

   86 dealloc_stmt: SYM_DEALLOCATE expr SYM_SEMICOLON

   87 debug_stmt: SYM_DEBUG dbg_list SYM_SEMICOLON

   88 delete_stmt: SYM_DELETE expr SYM_SEMICOLON

   89 expr_stmt: expr SYM_SEMICOLON

   90 if_stmt: if_hdr stmt

   91 @7: /* empty */

   92 if_stmt: if_hdr stmt SYM_ELSE @7 stmt

   93 for_stmt: for_hdr stmt

   94 @8: /* empty */

   95 @9: /* empty */

   96 return_stmt: SYM_RETURN @8 expr @9 SYM_SEMICOLON

   97 while_stmt: while_hdr stmt

   98 @10: /* empty */

   99 @11: /* empty */

  100 @12: /* empty */

  101 if_hdr: SYM_IF @10 SYM_LPAREN @11 expr @12 SYM_RPAREN

  102 @13: /* empty */

  103 @14: /* empty */

  104 for_hdr: SYM_FOR @13 SYM_LPAREN @14 for_ctrl SYM_RPAREN

  105 for_ctrl: for_in
  106         | for_count

  107 for_in: id SYM_IN id

  108 @15: /* empty */

  109 @16: /* empty */

  110 for_count: for_expr SYM_SEMICOLON @15 for_test_expr SYM_SEMICOLON @16 for_expr

  111 for_expr: expr
  112         | /* empty */

  113 for_test_expr: expr
  114              | /* empty */

  115 @17: /* empty */

  116 @18: /* empty */

  117 @19: /* empty */

  118 while_hdr: SYM_WHILE @17 SYM_LPAREN @18 expr @19 SYM_RPAREN

  119 dbg_list: SYM_LPAREN e_list SYM_RPAREN
  120         | e_list

  121 e_list: expr
  122       | expr SYM_COMMA e_list

  123 expr: rval
  124     | lval assignop expr

  125 lval: id
  126     | ar_lval
  127     | at_lval

  128 ar_lval: lval SYM_LBRACK i_list SYM_RBRACK

  129 at_lval: lval SYM_PERIOD SYM_IDENT

  130 rval: disj
  131     | disj SYM_OR rval

  132 disj: conj
  133     | conj SYM_AND disj

  134 conj: a_expr
  135     | a_expr relop a_expr

  136 a_expr: term
  137       | term addop a_expr

  138 term: factor
  139     | factor mulop term

  140 factor: primary
  141       | primary SYM_UPARROW factor

  142 primary: lval
  143        | num
  144        | string
  145        | incr
  146        | unop primary
  147        | id SYM_LPAREN actuals SYM_RPAREN
  148        | SYM_LPAREN expr SYM_RPAREN

  149 incr: incrop lval
  150     | lval incrop

  151 actuals: ap_list
  152        | /* empty */

  153 ap_list: a_parm
  154        | a_parm SYM_COMMA ap_list

  155 a_parm: expr

  156 i_list: expr
  157       | expr SYM_COMMA i_list

  158 assignop: SYM_ASSIGN
  159         | SYM_PLUS_ASSIGN
  160         | SYM_MINUS_ASSIGN
  161         | SYM_STAR_ASSIGN
  162         | SYM_SLASH_ASSIGN
  163         | SYM_MODULUS_ASSIGN
  164         | SYM_UPARROW_ASSIGN

  165 relop: SYM_LESS
  166      | SYM_LESS_EQUAL
  167      | SYM_EQUAL
  168      | SYM_NOT_EQUAL
  169      | SYM_GREATER_EQUAL
  170      | SYM_GREATER
  171      | SYM_MATCH
  172      | SYM_DONT_MATCH
  173      | SYM_IN

  174 addop: SYM_PLUS
  175      | SYM_MINUS

  176 mulop: SYM_STAR
  177      | SYM_SLASH
  178      | SYM_MODULUS
  179      | SYM_ATSIGN

  180 incrop: SYM_PLUS_PLUS
  181       | SYM_MINUS_MINUS

  182 unop: SYM_MINUS
  183     | SYM_NOT

  184 id: SYM_IDENT

  185 num: SYM_INT_LIT
  186    | SYM_FLOAT_LIT

  187 string: SYM_STRING_LIT


Terminals, with rules where they appear

$end (0) 0
error (256)
SYM_ADDRESS (258)
SYM_ALLOCATE (259) 80
SYM_AND (260) 133
SYM_ASSERT (261) 81
SYM_ASSIGN (262) 158
SYM_ATOM (263) 26
SYM_ATSIGN (264) 179
SYM_ATTRIBUTE (265)
SYM_BOUNDS (266) 24
SYM_BREAK (267) 82
SYM_CALL (268)
SYM_COMMA (269) 35 37 43 55 122 154 157
SYM_CONTINUE (270) 85
SYM_DEALLOCATE (271) 86
SYM_DEBUG (272) 87
SYM_DECL (273)
SYM_DELETE (274) 88
SYM_DONT_MATCH (275) 172
SYM_DYNAMIC (276) 45
SYM_ELSE (277) 92
SYM_EQUAL (278) 167
SYM_ERROR (279)
SYM_FILE (280) 22
SYM_FLOAT (281) 20
SYM_FLOAT_LIT (282) 186
SYM_FOR (283) 104
SYM_FOREACH (284)
SYM_GREATER (285) 170
SYM_GREATER_EQUAL (286) 169
SYM_HASHED (287) 41
SYM_IDENT (288) 129 184
SYM_IF (289) 101
SYM_IN (290) 107 173
SYM_INDEX (291)
SYM_INDIRECT (292)
SYM_INT (293) 18
SYM_INT_LIT (294) 185
SYM_LBRACE (295) 30 60 84
SYM_LBRACK (296) 39 128
SYM_LESS (297) 165
SYM_LESS_EQUAL (298) 166
SYM_LIST (299)
SYM_LPAREN (300) 51 101 104 118 119 147 148
SYM_MATCH (301) 171
SYM_MATRIX (302) 25
SYM_MINUS (303) 175 182
SYM_MINUS_ASSIGN (304) 160
SYM_MINUS_MINUS (305) 181
SYM_MODULUS (306) 178
SYM_MODULUS_ASSIGN (307) 163
SYM_MOLECULE (308) 28
SYM_NEGATE (309)
SYM_NOT (310) 183
SYM_NOT_EQUAL (311) 168
SYM_OR (312) 131
SYM_PARM (313)
SYM_PERIOD (314) 129
SYM_PLUS (315) 174
SYM_PLUS_ASSIGN (316) 159
SYM_PLUS_PLUS (317) 180
SYM_POINT (318) 23
SYM_POINTS_TO (319)
SYM_RBRACE (320) 30 60 84
SYM_RBRACK (321) 39 128
SYM_RESIDUE (322) 27
SYM_RETURN (323) 96
SYM_RPAREN (324) 51 101 104 118 119 147 148
SYM_SEMICOLON (325) 14 15 33 46 47 60 80 81 82 85 86 87 88 89 96 110
SYM_SIZE_T (326) 19
SYM_SLASH (327) 177
SYM_SLASH_ASSIGN (328) 162
SYM_STAR (329) 176
SYM_STAR_ASSIGN (330) 161
SYM_STMTLIST (331)
SYM_STRING (332) 21
SYM_STRING_LIT (333) 187
SYM_STRUCT (334) 29 30
SYM_TEST (335)
SYM_TYPE (336)
SYM_UPARROW (337) 141
SYM_UPARROW_ASSIGN (338) 164
SYM_WHILE (339) 118


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
program (86)
    on left: 1, on right: 0
defpart (87)
    on left: 2 3, on right: 1
defs (88)
    on left: 4 5, on right: 2 5
stmtpart (89)
    on left: 6 7, on right: 1
stmts (90)
    on left: 8 9, on right: 6 9 65 84
def (91)
    on left: 10 11 12 13, on right: 4 5
type_decl (92)
    on left: 14, on right: 10
var_decl (93)
    on left: 15, on right: 11 63 64
type (94)
    on left: 16 17, on right: 15 51 56
simple_type (95)
    on left: 18 19 20 21 22 23 24 25 26 27 28, on right: 16 33
struct_type (96)
    on left: 29 30, on right: 14 17
field_list (97)
    on left: 31 32, on right: 30 32
field (98)
    on left: 33, on right: 31 32
id_list (99)
    on left: 34 35, on right: 33 35
var_list (100)
    on left: 36 37, on right: 15 37
var (101)
    on left: 38 39, on right: 36 37 56
aspec (102)
    on left: 40 41, on right: 39
as_list (103)
    on left: 42 43, on right: 40 43
asize (104)
    on left: 44 45, on right: 42 43
func_decl (105)
    on left: 46 47, on right: 12
func_def (106)
    on left: 49, on right: 13
@1 (107)
    on left: 48, on right: 49
func_hdr (108)
    on left: 51, on right: 46 47 49
@2 (109)
    on left: 50, on right: 51
formals (110)
    on left: 52 53, on right: 51
fp_list (111)
    on left: 54 55, on right: 52 55
f_parm (112)
    on left: 56, on right: 54 55
func_body (113)
    on left: 60, on right: 49
@3 (114)
    on left: 57, on right: 60
@4 (115)
    on left: 58, on right: 60
@5 (116)
    on left: 59, on right: 60
f_defpart (117)
    on left: 61 62, on right: 60
lv_decls (118)
    on left: 63 64, on right: 61 64
f_stmtpart (119)
    on left: 65 66, on right: 60
stmt (120)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79,
    on right: 8 9 90 92 93 97
alloc_stmt (121)
    on left: 80, on right: 68
assert_stmt (122)
    on left: 81, on right: 69
break_stmt (123)
    on left: 82, on right: 70
cmpd_stmt (124)
    on left: 84, on right: 72
@6 (125)
    on left: 83, on right: 84
continue_stmt (126)
    on left: 85, on right: 71
dealloc_stmt (127)
    on left: 86, on right: 73
debug_stmt (128)
    on left: 87, on right: 74
delete_stmt (129)
    on left: 88, on right: 75
expr_stmt (130)
    on left: 89, on right: 67
if_stmt (131)
    on left: 90 92, on right: 77
@7 (132)
    on left: 91, on right: 92
for_stmt (133)
    on left: 93, on right: 76
return_stmt (134)
    on left: 96, on right: 78
@8 (135)
    on left: 94, on right: 96
@9 (136)
    on left: 95, on right: 96
while_stmt (137)
    on left: 97, on right: 79
if_hdr (138)
    on left: 101, on right: 90 92
@10 (139)
    on left: 98, on right: 101
@11 (140)
    on left: 99, on right: 101
@12 (141)
    on left: 100, on right: 101
for_hdr (142)
    on left: 104, on right: 93
@13 (143)
    on left: 102, on right: 104
@14 (144)
    on left: 103, on right: 104
for_ctrl (145)
    on left: 105 106, on right: 104
for_in (146)
    on left: 107, on right: 105
for_count (147)
    on left: 110, on right: 106
@15 (148)
    on left: 108, on right: 110
@16 (149)
    on left: 109, on right: 110
for_expr (150)
    on left: 111 112, on right: 110
for_test_expr (151)
    on left: 113 114, on right: 110
while_hdr (152)
    on left: 118, on right: 97
@17 (153)
    on left: 115, on right: 118
@18 (154)
    on left: 116, on right: 118
@19 (155)
    on left: 117, on right: 118
dbg_list (156)
    on left: 119 120, on right: 87
e_list (157)
    on left: 121 122, on right: 119 120 122
expr (158)
    on left: 123 124, on right: 44 80 81 86 88 89 96 101 111 113 118
    121 122 124 148 155 156 157
lval (159)
    on left: 125 126 127, on right: 124 128 129 142 149 150
ar_lval (160)
    on left: 128, on right: 126
at_lval (161)
    on left: 129, on right: 127
rval (162)
    on left: 130 131, on right: 123 131
disj (163)
    on left: 132 133, on right: 130 131 133
conj (164)
    on left: 134 135, on right: 132 133
a_expr (165)
    on left: 136 137, on right: 134 135 137
term (166)
    on left: 138 139, on right: 136 137 139
factor (167)
    on left: 140 141, on right: 138 139 141
primary (168)
    on left: 142 143 144 145 146 147 148, on right: 140 141 146
incr (169)
    on left: 149 150, on right: 145
actuals (170)
    on left: 151 152, on right: 147
ap_list (171)
    on left: 153 154, on right: 151 154
a_parm (172)
    on left: 155, on right: 153 154
i_list (173)
    on left: 156 157, on right: 128 157
assignop (174)
    on left: 158 159 160 161 162 163 164, on right: 124
relop (175)
    on left: 165 166 167 168 169 170 171 172 173, on right: 135
addop (176)
    on left: 174 175, on right: 137
mulop (177)
    on left: 176 177 178 179, on right: 139
incrop (178)
    on left: 180 181, on right: 149 150
unop (179)
    on left: 182 183, on right: 146
id (180)
    on left: 184, on right: 29 30 34 35 38 39 47 51 107 125 147
num (181)
    on left: 185 186, on right: 143
string (182)
    on left: 187, on right: 144


state 0

    0 $accept: . program $end

    SYM_ATOM      shift, and go to state 1
    SYM_BOUNDS    shift, and go to state 2
    SYM_FILE      shift, and go to state 3
    SYM_FLOAT     shift, and go to state 4
    SYM_INT       shift, and go to state 5
    SYM_MATRIX    shift, and go to state 6
    SYM_MOLECULE  shift, and go to state 7
    SYM_POINT     shift, and go to state 8
    SYM_RESIDUE   shift, and go to state 9
    SYM_SIZE_T    shift, and go to state 10
    SYM_STRING    shift, and go to state 11
    SYM_STRUCT    shift, and go to state 12

    $default  reduce using rule 3 (defpart)

    program      go to state 13
    defpart      go to state 14
    defs         go to state 15
    def          go to state 16
    type_decl    go to state 17
    var_decl     go to state 18
    type         go to state 19
    simple_type  go to state 20
    struct_type  go to state 21
    func_decl    go to state 22
    func_def     go to state 23
    func_hdr     go to state 24


state 1

   26 simple_type: SYM_ATOM .

    $default  reduce using rule 26 (simple_type)


state 2

   24 simple_type: SYM_BOUNDS .

    $default  reduce using rule 24 (simple_type)


state 3

   22 simple_type: SYM_FILE .

    $default  reduce using rule 22 (simple_type)


state 4

   20 simple_type: SYM_FLOAT .

    $default  reduce using rule 20 (simple_type)


state 5

   18 simple_type: SYM_INT .

    $default  reduce using rule 18 (simple_type)


state 6

   25 simple_type: SYM_MATRIX .

    $default  reduce using rule 25 (simple_type)


state 7

   28 simple_type: SYM_MOLECULE .

    $default  reduce using rule 28 (simple_type)


state 8

   23 simple_type: SYM_POINT .

    $default  reduce using rule 23 (simple_type)


state 9

   27 simple_type: SYM_RESIDUE .

    $default  reduce using rule 27 (simple_type)


state 10

   19 simple_type: SYM_SIZE_T .

    $default  reduce using rule 19 (simple_type)


state 11

   21 simple_type: SYM_STRING .

    $default  reduce using rule 21 (simple_type)


state 12

   29 struct_type: SYM_STRUCT . id
   30            | SYM_STRUCT . id SYM_LBRACE field_list SYM_RBRACE

    SYM_IDENT  shift, and go to state 25

    id  go to state 26


state 13

    0 $accept: program . $end

    $end  shift, and go to state 27


state 14

    1 program: defpart . stmtpart

    SYM_ALLOCATE     shift, and go to state 28
    SYM_ASSERT       shift, and go to state 29
    SYM_BREAK        shift, and go to state 30
    SYM_CONTINUE     shift, and go to state 31
    SYM_DEALLOCATE   shift, and go to state 32
    SYM_DEBUG        shift, and go to state 33
    SYM_DELETE       shift, and go to state 34
    SYM_FLOAT_LIT    shift, and go to state 35
    SYM_FOR          shift, and go to state 36
    SYM_IDENT        shift, and go to state 25
    SYM_IF           shift, and go to state 37
    SYM_INT_LIT      shift, and go to state 38
    SYM_LBRACE       shift, and go to state 39
    SYM_LPAREN       shift, and go to state 40
    SYM_MINUS        shift, and go to state 41
    SYM_MINUS_MINUS  shift, and go to state 42
    SYM_NOT          shift, and go to state 43
    SYM_PLUS_PLUS    shift, and go to state 44
    SYM_RETURN       shift, and go to state 45
    SYM_STRING_LIT   shift, and go to state 46
    SYM_WHILE        shift, and go to state 47

    $default  reduce using rule 7 (stmtpart)

    stmtpart       go to state 48
    stmts          go to state 49
    stmt           go to state 50
    alloc_stmt     go to state 51
    assert_stmt    go to state 52
    break_stmt     go to state 53
    cmpd_stmt      go to state 54
    continue_stmt  go to state 55
    dealloc_stmt   go to state 56
    debug_stmt     go to state 57
    delete_stmt    go to state 58
    expr_stmt      go to state 59
    if_stmt        go to state 60
    for_stmt       go to state 61
    return_stmt    go to state 62
    while_stmt     go to state 63
    if_hdr         go to state 64
    for_hdr        go to state 65
    while_hdr      go to state 66
    expr           go to state 67
    lval           go to state 68
    ar_lval        go to state 69
    at_lval        go to state 70
    rval           go to state 71
    disj           go to state 72
    conj           go to state 73
    a_expr         go to state 74
    term           go to state 75
    factor         go to state 76
    primary        go to state 77
    incr           go to state 78
    incrop         go to state 79
    unop           go to state 80
    id             go to state 81
    num            go to state 82
    string         go to state 83


state 15

    2 defpart: defs .

    $default  reduce using rule 2 (defpart)


state 16

    4 defs: def .
    5     | def . defs

    SYM_ATOM      shift, and go to state 1
    SYM_BOUNDS    shift, and go to state 2
    SYM_FILE      shift, and go to state 3
    SYM_FLOAT     shift, and go to state 4
    SYM_INT       shift, and go to state 5
    SYM_MATRIX    shift, and go to state 6
    SYM_MOLECULE  shift, and go to state 7
    SYM_POINT     shift, and go to state 8
    SYM_RESIDUE   shift, and go to state 9
    SYM_SIZE_T    shift, and go to state 10
    SYM_STRING    shift, and go to state 11
    SYM_STRUCT    shift, and go to state 12

    $default  reduce using rule 4 (defs)

    defs         go to state 84
    def          go to state 16
    type_decl    go to state 17
    var_decl     go to state 18
    type         go to state 19
    simple_type  go to state 20
    struct_type  go to state 21
    func_decl    go to state 22
    func_def     go to state 23
    func_hdr     go to state 24


state 17

   10 def: type_decl .

    $default  reduce using rule 10 (def)


state 18

   11 def: var_decl .

    $default  reduce using rule 11 (def)


state 19

   15 var_decl: type . var_list SYM_SEMICOLON
   51 func_hdr: type . id @2 SYM_LPAREN formals SYM_RPAREN

    SYM_IDENT  shift, and go to state 25

    var_list  go to state 85
    var       go to state 86
    id        go to state 87


state 20

   16 type: simple_type .

    $default  reduce using rule 16 (type)


state 21

   14 type_decl: struct_type . SYM_SEMICOLON
   17 type: struct_type .

    SYM_SEMICOLON  shift, and go to state 88

    $default  reduce using rule 17 (type)


state 22

   12 def: func_decl .

    $default  reduce using rule 12 (def)


state 23

   13 def: func_def .

    $default  reduce using rule 13 (def)


state 24

   46 func_decl: func_hdr . SYM_SEMICOLON
   47          | func_hdr . id SYM_SEMICOLON
   49 func_def: func_hdr . @1 func_body

    SYM_IDENT      shift, and go to state 25
    SYM_SEMICOLON  shift, and go to state 89

    $default  reduce using rule 48 (@1)

    @1  go to state 90
    id  go to state 91


state 25

  184 id: SYM_IDENT .

    $default  reduce using rule 184 (id)


state 26

   29 struct_type: SYM_STRUCT id .
   30            | SYM_STRUCT id . SYM_LBRACE field_list SYM_RBRACE

    SYM_LBRACE  shift, and go to state 92

    $default  reduce using rule 29 (struct_type)


state 27

    0 $accept: program $end .

    $default  accept


state 28

   80 alloc_stmt: SYM_ALLOCATE . expr SYM_SEMICOLON

    SYM_FLOAT_LIT    shift, and go to state 35
    SYM_IDENT        shift, and go to state 25
    SYM_INT_LIT      shift, and go to state 38
    SYM_LPAREN       shift, and go to state 40
    SYM_MINUS        shift, and go to state 41
    SYM_MINUS_MINUS  shift, and go to state 42
    SYM_NOT          shift, and go to state 43
    SYM_PLUS_PLUS    shift, and go to state 44
    SYM_STRING_LIT   shift, and go to state 46

    expr     go to state 93
    lval     go to state 68
    ar_lval  go to state 69
    at_lval  go to state 70
    rval     go to state 71
    disj     go to state 72
    conj     go to state 73
    a_expr   go to state 74
    term     go to state 75
    factor   go to state 76
    primary  go to state 77
    incr     go to state 78
    incrop   go to state 79
    unop     go to state 80
    id       go to state 81
    num      go to state 82
    string   go to state 83


state 29

   81 assert_stmt: SYM_ASSERT . expr SYM_SEMICOLON

    SYM_FLOAT_LIT    shift, and go to state 35
    SYM_IDENT        shift, and go to state 25
    SYM_INT_LIT      shift, and go to state 38
    SYM_LPAREN       shift, and go to state 40
    SYM_MINUS        shift, and go to state 41
    SYM_MINUS_MINUS  shift, and go to state 42
    SYM_NOT          shift, and go to state 43
    SYM_PLUS_PLUS    shift, and go to state 44
    SYM_STRING_LIT   shift, and go to state 46

    expr     go to state 94
    lval     go to state 68
    ar_lval  go to state 69
    at_lval  go to state 70
    rval     go to state 71
    disj     go to state 72
    conj     go to state 73
    a_expr   go to state 74
    term     go to state 75
    factor   go to state 76
    primary  go to state 77
    incr     go to state 78
    incrop   go to state 79
    unop     go to state 80
    id       go to state 81
    num      go to state 82
    string   go to state 83


state 30

   82 break_stmt: SYM_BREAK . SYM_SEMICOLON

    SYM_SEMICOLON  shift, and go to state 95


state 31

   85 continue_stmt: SYM_CONTINUE . SYM_SEMICOLON

    SYM_SEMICOLON  shift, and go to state 96


state 32

   86 dealloc_stmt: SYM_DEALLOCATE . expr SYM_SEMICOLON

    SYM_FLOAT_LIT    shift, and go to state 35
    SYM_IDENT        shift, and go to state 25
    SYM_INT_LIT      shift, and go to state 38
    SYM_LPAREN       shift, and go to state 40
    SYM_MINUS        shift, and go to state 41
    SYM_MINUS_MINUS  shift, and go to state 42
    SYM_NOT          shift, and go to state 43
    SYM_PLUS_PLUS    shift, and go to state 44
    SYM_STRING_LIT   shift, and go to state 46

    expr     go to state 97
    lval     go to state 68
    ar_lval  go to state 69
    at_lval  go to state 70
    rval     go to state 71
    disj     go to state 72
    conj     go to state 73
    a_expr   go to state 74
    term     go to state 75
    factor   go to state 76
    primary  go to state 77
    incr     go to state 78
    incrop   go to state 79
    unop     go to state 80
    id       go to state 81
    num      go to state 82
    string   go to state 83


state 33

   87 debug_stmt: SYM_DEBUG . dbg_list SYM_SEMICOLON

    SYM_FLOAT_LIT    shift, and go to state 35
    SYM_IDENT        shift, and go to state 25
    SYM_INT_LIT      shift, and go to state 38
    SYM_LPAREN       shift, and go to state 98
    SYM_MINUS        shift, and go to state 41
    SYM_MINUS_MINUS  shift, and go to state 42
    SYM_NOT          shift, and go to state 43
    SYM_PLUS_PLUS    shift, and go to state 44
    SYM_STRING_LIT   shift, and go to state 46

    dbg_list  go to state 99
    e_list    go to state 100
    expr      go to state 101
    lval      go to state 68
    ar_lval   go to state 69
    at_lval   go to state 70
    rval      go to state 71
    disj      go to state 72
    conj      go to state 73
    a_expr    go to state 74
    term      go to state 75
    factor    go to state 76
    primary   go to state 77
    incr      go to state 78
    incrop    go to state 79
    unop      go to state 80
    id        go to state 81
    num       go to state 82
    string    go to state 83


state 34

   88 delete_stmt: SYM_DELETE . expr SYM_SEMICOLON

    SYM_FLOAT_LIT    shift, and go to state 35
    SYM_IDENT        shift, and go to state 25
    SYM_INT_LIT      shift, and go to state 38
    SYM_LPAREN       shift, and go to state 40
    SYM_MINUS        shift, and go to state 41
    SYM_MINUS_MINUS  shift, and go to state 42
    SYM_NOT          shift, and go to state 43
    SYM_PLUS_PLUS    shift, and go to state 44
    SYM_STRING_LIT   shift, and go to state 46

    expr     go to state 102
    lval     go to state 68
    ar_lval  go to state 69
    at_lval  go to state 70
    rval     go to state 71
    disj     go to state 72
    conj     go to state 73
    a_expr   go to state 74
    term     go to state 75
    factor   go to state 76
    primary  go to state 77
    incr     go to state 78
    incrop   go to state 79
    unop     go to state 80
    id       go to state 81
    num      go to state 82
    string   go to state 83


state 35

  186 num: SYM_FLOAT_LIT .

    $default  reduce using rule 186 (num)


state 36

  104 for_hdr: SYM_FOR . @13 SYM_LPAREN @14 for_ctrl SYM_RPAREN

    $default  reduce using rule 102 (@13)

    @13  go to state 103


state 37

  101 if_hdr: SYM_IF . @10 SYM_LPAREN @11 expr @12 SYM_RPAREN

    $default  reduce using rule 98 (@10)

    @10  go to state 104


state 38

  185 num: SYM_INT_LIT .

    $default  reduce using rule 185 (num)


state 39

   84 cmpd_stmt: SYM_LBRACE . @6 stmts SYM_RBRACE

    $default  reduce using rule 83 (@6)

    @6  go to state 105


state 40

  148 primary: SYM_LPAREN . expr SYM_RPAREN

    SYM_FLOAT_LIT    shift, and go to state 35
    SYM_IDENT        shift, and go to state 25
    SYM_INT_LIT      shift, and go to state 38
    SYM_LPAREN       shift, and go to state 40
    SYM_MINUS        shift, and go to state 41
    SYM_MINUS_MINUS  shift, and go to state 42
    SYM_NOT          shift, and go to state 43
    SYM_PLUS_PLUS    shift, and go to state 44
    SYM_STRING_LIT   shift, and go to state 46

    expr     go to state 106
    lval     go to state 68
    ar_lval  go to state 69
    at_lval  go to state 70
    rval     go to state 71
    disj     go to state 72
    conj     go to state 73
    a_expr   go to state 74
    term     go to state 75
    factor   go to state 76
    primary  go to state 77
    incr     go to state 78
    incrop   go to state 79
    unop     go to state 80
    id       go to state 81
    num      go to state 82
    string   go to state 83


state 41

  182 unop: SYM_MINUS .

    $default  reduce using rule 182 (unop)


state 42

  181 incrop: SYM_MINUS_MINUS .

    $default  reduce using rule 181 (incrop)


state 43

  183 unop: SYM_NOT .

    $default  reduce using rule 183 (unop)


state 44

  180 incrop: SYM_PLUS_PLUS .

    $default  reduce using rule 180 (incrop)


state 45

   96 return_stmt: SYM_RETURN . @8 expr @9 SYM_SEMICOLON

    $default  reduce using rule 94 (@8)

    @8  go to state 107


state 46

  187 string: SYM_STRING_LIT .

    $default  reduce using rule 187 (string)


state 47

  118 while_hdr: SYM_WHILE . @17 SYM_LPAREN @18 expr @19 SYM_RPAREN

    $default  reduce using rule 115 (@17)

    @17  go to state 108


state 48

    1 program: defpart stmtpart .

    $default  reduce using rule 1 (program)


state 49

    6 stmtpart: stmts .
    9 stmts: stmts . stmt

    SYM_ALLOCATE     shift, and go to state 28
    SYM_ASSERT       shift, and go to state 29
    SYM_BREAK        shift, and go to state 30
    SYM_CONTINUE     shift, and go to state 31
    SYM_DEALLOCATE   shift, and go to state 32
    SYM_DEBUG        shift, and go to state 33
    SYM_DELETE       shift, and go to state 34
    SYM_FLOAT_LIT    shift, and go to state 35
    SYM_FOR          shift, and go to state 36
    SYM_IDENT        shift, and go to state 25
    SYM_IF           shift, and go to state 37
    SYM_INT_LIT      shift, and go to state 38
    SYM_LBRACE       shift, and go to state 39
    SYM_LPAREN       shift, and go to state 40
    SYM_MINUS        shift, and go to state 41
    SYM_MINUS_MINUS  shift, and go to state 42
    SYM_NOT          shift, and go to state 43
    SYM_PLUS_PLUS    shift, and go to state 44
    SYM_RETURN       shift, and go to state 45
    SYM_STRING_LIT   shift, and go to state 46
    SYM_WHILE        shift, and go to state 47

    $default  reduce using rule 6 (stmtpart)

    stmt           go to state 109
    alloc_stmt     go to state 51
    assert_stmt    go to state 52
    break_stmt     go to state 53
    cmpd_stmt      go to state 54
    continue_stmt  go to state 55
    dealloc_stmt   go to state 56
    debug_stmt     go to state 57
    delete_stmt    go to state 58
    expr_stmt      go to state 59
    if_stmt        go to state 60
    for_stmt       go to state 61
    return_stmt    go to state 62
    while_stmt     go to state 63
    if_hdr         go to state 64
    for_hdr        go to state 65
    while_hdr      go to state 66
    expr           go to state 67
    lval           go to state 68
    ar_lval        go to state 69
    at_lval        go to state 70
    rval           go to state 71
    disj           go to state 72
    conj           go to state 73
    a_expr         go to state 74
    term           go to state 75
    factor         go to state 76
    primary        go to state 77
    incr           go to state 78
    incrop         go to state 79
    unop           go to state 80
    id             go to state 81
    num            go to state 82
    string         go to state 83


state 50

    8 stmts: stmt .

    $default  reduce using rule 8 (stmts)


state 51

   68 stmt: alloc_stmt .

    $default  reduce using rule 68 (stmt)


state 52

   69 stmt: assert_stmt .

    $default  reduce using rule 69 (stmt)


state 53

   70 stmt: break_stmt .

    $default  reduce using rule 70 (stmt)


state 54

   72 stmt: cmpd_stmt .

    $default  reduce using rule 72 (stmt)


state 55

   71 stmt: continue_stmt .

    $default  reduce using rule 71 (stmt)


state 56

   73 stmt: dealloc_stmt .

    $default  reduce using rule 73 (stmt)


state 57

   74 stmt: debug_stmt .

    $default  reduce using rule 74 (stmt)


state 58

   75 stmt: delete_stmt .

    $default  reduce using rule 75 (stmt)


state 59

   67 stmt: expr_stmt .

    $default  reduce using rule 67 (stmt)


state 60

   77 stmt: if_stmt .

    $default  reduce using rule 77 (stmt)


state 61

   76 stmt: for_stmt .

    $default  reduce using rule 76 (stmt)


state 62

   78 stmt: return_stmt .

    $default  reduce using rule 78 (stmt)


state 63

   79 stmt: while_stmt .

    $default  reduce using rule 79 (stmt)


state 64

   90 if_stmt: if_hdr . stmt
   92        | if_hdr . stmt SYM_ELSE @7 stmt
